Updated readme. Fixed chat overflowing past message box. Fixed bug where occasionally mouse would draw even whe not pressed.

--- a/tutor.css
+++ b/tutor.css
@@ -60,6 +60,7 @@ video {
     margin-left: auto;
     margin-right: auto;
     font-family: "Lato";
+    overflow: auto;
 }
 
 .line {
